--- a/src/pages/ListPokemons/styles.css
+++ b/src/pages/ListPokemons/styles.css
@@ -1,10 +1,10 @@
-.container {
+.container-list {
   max-width: 960px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
   grid-gap: 10px;
   flex-wrap: wrap;
-  margin: 20px auto 30px;
+  margin: 10px auto 30px;
 }
 
 .card-pokemon {
@@ -13,33 +13,35 @@
   margin: 0 auto 30px;
   width: 180px;
   height: 264px;
-  background: #f2f2f2;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  background: #fff;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.25);
   border-radius: 7px;
-  transition: all 100ms ease-out;
+  /* transition: all 100ms ease-out; */
 }
 
 .card-pokemon:hover {
-  transform: scale(1.04);
+  /* transform: scale(1.03); */
   cursor: pointer;
 }
 
 .container-image {
   display: flex;
-  flex: 3;
   justify-content: center;
+  align-items: center;
+  width: 175px;
+  height: 170px;
 }
 
 img {
-  position: relative;
-  width: 180px;
+  width: 90%;
+  height: 90%;
 }
 
 .card-info {
   display: flex;
   flex-direction: column;
   flex: 2;
-  background: #a3a3a3;
+  background: #c0c0c0;
   padding: 15px;
   -webkit-border-bottom-right-radius: 7px;
   -webkit-border-bottom-left-radius: 7px;
@@ -59,8 +61,8 @@ img {
   display: flex;
 }
 
-.type-fire {
-  width: 50px;
+.type-badge {
+  width: 70px;
   height: 20px;
   border-radius: 10px;
   margin-right: 10px;
@@ -70,4 +72,21 @@ img {
   display: flex;
   color: #fff;
   font-size: 13px;
+}
+
+.load-spinner {
+  background-color: transparent;
+  height: 60px;
+  width: 60px;
+  animation: spin 2s ease-in-out infinite;
+  margin-top: 10px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
