--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -19,21 +19,50 @@ header {
 
 .search-bar {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 5px;
   width: 470px;
-  height: 50px;
+  height: 39px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  margin-right: 5px;
+}
+
+.close-icon {
+  border: 1px solid transparent;
+  background-color: transparent;
+  display: inline-block;
+  vertical-align: middle;
+  outline: 0;
+  cursor: pointer;
+}
+.close-icon {
+  width: 15px;
+  height: 15px;
+  background-color: #fa9595;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  font-weight: normal;
+  font-size: 12px;
+  box-shadow: 0 0 2px #e50f0f;
+  cursor: pointer;
 }
 
 .search-bar input {
   padding: 2px 4px;
   margin-left: 5px;
   flex: 1;
-  font-size: 18px;
+  font-size: 15px;
   width: 100%;
   background: #ffffff;
-  border-radius: 5px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
   border: none;
+}
+
+.search-bar form {
+  width: 100%;
 }
 
 ::placeholder {
