--- a/src/pages/ListPokemons/styles.css
+++ b/src/pages/ListPokemons/styles.css
@@ -30,11 +30,12 @@
   align-items: center;
   width: 175px;
   height: 170px;
+  padding: 7px;
 }
 
-img {
-  width: 90%;
-  height: 90%;
+.card-pokemon img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .card-info {
@@ -72,21 +73,4 @@ img {
   display: flex;
   color: #fff;
   font-size: 13px;
-}
-
-.load-spinner {
-  background-color: transparent;
-  height: 60px;
-  width: 60px;
-  animation: spin 2s ease-in-out infinite;
-  margin-top: 10px;
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
